--- a/src/theme/variables.css
+++ b/src/theme/variables.css
@@ -6,3 +6,28 @@
 body {
     font-family: 'Onest Variable', sans-serif;
   }
+
+  .custom-icon-color {
+    color: rgb(62, 95, 241); /* Cambia este valor al color que prefieras */
+  }
+
+  .custom-icon-color {
+    font-size: 14px; /* Ajusta el tamaño del icono */
+    --ionicon-stroke-width: 32px; /* Cambia el grosor de las líneas del icono si es necesario */
+  }
+
+  .custom-tab-bar {
+    height: 80px; /* Ajusta la altura a lo que necesites */
+    --ion-safe-area-bottom: 0px; /* Asegura que no haya un margen adicional en la parte inferior */
+  }
+  
+
+  
+  /* Media query para ajustar el tamaño en pantallas pequeñas */
+  @media (max-width: 600px) {
+    .fixed-card-size {
+      width: 100%; /* Ajusta el ancho a 100% en pantallas pequeñas */
+      height: auto; /* Ajusta la altura automáticamente en pantallas pequeñas */
+    }
+  }
+  
