--- a/src/theme/variables.css
+++ b/src/theme/variables.css
@@ -5,11 +5,21 @@
 
 body {
     font-family: 'Onest Variable', sans-serif;
-    position: sticky;
   }
 
 
 
+/* Añade esto a tu archivo CSS global o componente */
+
+@media (min-width: 768px) {
+  .desktop-hidden {
+    display: none !important;
+  }
+
+  .container-cards{
+    justify-content: center;
+  }
+}
 
 
 
@@ -17,11 +27,15 @@ body {
   
 
   
-  /* Media query para ajustar el tamaño en pantallas pequeñas */
-  @media (max-width: 600px) {
-    .fixed-card-size {
-      width: 100%; /* Ajusta el ancho a 100% en pantallas pequeñas */
-      height: auto; /* Ajusta la altura automáticamente en pantallas pequeñas */
-    }
-  }
+/* Añade esto a tu archivo CSS global o componente */
+
+
+
+
+
+
+
+
+
+
   
