--- a/src/theme/variables.css
+++ b/src/theme/variables.css
@@ -80,9 +80,33 @@ body {
   animation: pulse 1.5s infinite;
 }
 
+ion-button {
+  --background-hover: none;
+  --background-activated: none;
+  --background-focused: none;
+
+
+  --border-radius: 0;
+  --border-radius: 9999px;
+  --border-color: #000;
+  --border-style: solid;
+  --border-width: 0;
+
+  --box-shadow: 0;
+
+  --ripple-color: none;
+
+  --padding-top: 0px;
+  --padding-bottom: 0px;
+}
 
 
 
+@media (max-width: 365px) {
+  .fixed-card-size{
+    width: 280px;
+  }
+}
 
   
 
