--- a/src/theme/variables.css
+++ b/src/theme/variables.css
@@ -4,6 +4,7 @@
 
 /* index.css o App.css */
 @import "react-spring-bottom-sheet/dist/style.css";
+@import '@fortawesome/fontawesome-free/css/all.min.css';
 
 
 
