--- a/src/theme/variables.css
+++ b/src/theme/variables.css
@@ -170,4 +170,27 @@ ion-button {
 
 
 
-  
+.leaflet-popup {
+  padding: 0px;
+  margin: 0px;
+}
+
+
+.leaflet-popup-content-wrapper {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 0px;
+}
+
+.leaflet-popup-content {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 0px;
+  margin: 0px;
+  border-radius: 0px;
+  box-shadow: none;
+  background-color: transparent;
+}
+
