--- a/src/theme/variables.css
+++ b/src/theme/variables.css
@@ -9,23 +9,9 @@
 
 body {
   font-family: 'Onest Variable', sans-serif;
-  background-color: white;
+  background-color: transparent;
 }
 
-
-
-
-@keyframes breathing {
-
-  0%,
-  100% {
-    transform: scale(1);
-  }
-
-  50% {
-    transform: scale(1.05);
-  }
-}
 
 .breathing {
   animation: breathing 2s ease-in-out infinite;
@@ -37,25 +23,6 @@ body {
 }
 
 
-
-/* Añade esto a tu archivo CSS global o componente */
-
-@media (min-width: 768px) {
-
-
-  .container-cards {
-    justify-content: center;
-  }
-}
-
-@media (max-width: 380px) {
-
-  .persistentbottomtitle {
-
-    font-size: 14px;
-      /* 16px */
-  }
-}
 
 .leaflet-container {
   height: 400px;
@@ -72,38 +39,12 @@ body {
   background: rgba(255, 255, 255, 0.8);
 }
 
-
-/* theme/variables.css */
-
-/* Animación de giro lenta */
-@keyframes spin-slow {
-  0% {
-    transform: rotate(0deg);
-  }
-
-  100% {
-    transform: rotate(360deg);
-  }
-}
-
 .animate-spin-slow {
   animation: spin-slow 2s linear infinite;
 }
 
-/* Animación de pulso */
-@keyframes pulse {
-  0% {
-    opacity: 1;
-  }
 
-  50% {
-    opacity: 0.5;
-  }
 
-  100% {
-    opacity: 1;
-  }
-}
 
 .animate-pulse {
   animation: pulse 1.5s infinite;
@@ -130,12 +71,6 @@ ion-button {
 }
 
 
-
-@media (max-width: 365px) {
-  .fixed-card-size {
-    width: 280px;
-  }
-}
 
 .custom-modal {
   --background-color: rgba(255, 255, 255, 0.95) !important;
@@ -218,3 +153,66 @@ ion-button {
   box-shadow: none;
   background-color: transparent;
 }
+
+@keyframes breathing {
+
+  0%,
+  100% {
+    transform: scale(1);
+  }
+
+  50% {
+    transform: scale(1.05);
+  }
+}
+
+
+@keyframes spin-slow {
+  0% {
+    transform: rotate(0deg);
+  }
+
+  100% {
+    transform: rotate(360deg);
+  }
+}
+
+@keyframes pulse {
+  0% {
+    opacity: 1;
+  }
+
+  50% {
+    opacity: 0.5;
+  }
+
+  100% {
+    opacity: 1;
+  }
+}
+
+
+@media (min-width: 768px) {
+
+
+  .container-cards {
+    justify-content: center;
+  }
+}
+
+
+@media (max-width: 380px) {
+
+  .persistentbottomtitle {
+
+    font-size: 14px;
+      /* 16px */
+  }
+}
+
+@media (max-width: 365px) {
+  .fixed-card-size {
+    width: 280px;
+  }
+}
+
